<resources>
    <string name="app_name">小苏学长学生端</string>
    <string name="home">首页</string>
    <string name="resources">学习资源</string>
    <string name="profile">我的</string>
    <string name="monitoring">正在监控中...</string>
    <string name="monitoring_info">监控已在后台运行，您可以正常使用手机</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="logging_in">登录中...</string>
    <string name="registering">注册中...</string>
    <string name="register_success">注册成功，等待管理员激活</string>
    <string name="please_input_username_password">请输入用户名和密码</string>
    <string name="register_failed">注册失败</string>
    <string name="network_request_failed">网络请求失败</string>
    <string name="network_error">网络错误: %1$s</string>
    <string name="settings">设置</string>
    <string name="account_settings">账号设置</string>
    <string name="notification_settings">通知设置</string>
    <string name="about_us">关于我们</string>
    <string name="download">下载</string>
    <string name="view_details">查看详情</string>
    <string name="no_account_yet">还没有账号？</string>
    <string name="already_have_account">已有账号？</string>
    <string name="password_not_match">两次输入的密码不一致</string>
    <string name="go_to_login">去登录</string>
</resources>